<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>net.pkhsolutions.idispatch</groupId>
    <artifactId>master</artifactId>
    <version>2.1-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>iDispatch Master POM</name>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.7.4</version>
    </parent>

    <properties>
        <java.version>17</java.version>
        <vaadin.version>23.2.1</vaadin.version>
        <vavr.version>0.10.4</vavr.version>
        <guava.version>31.0.1-jre</guava.version>
    </properties>

    <modules>
        <module>aspsms-integration</module>
        <module>runboard</module>
        <module>server</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.vaadin</groupId>
                <artifactId>vaadin-bom</artifactId>
                <version>${vaadin.version}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>
            <dependency>
                <groupId>io.vavr</groupId>
                <artifactId>vavr</artifactId>
                <version>${vavr.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${guava.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
    </build>
</project>
